--- a/app.json
+++ b/app.json
@@ -1,30 +1,26 @@
 {
   "expo": {
-    "name": "weatherApp",
-    "slug": "weatherApp",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
+    "name": "Password Manager",
+    "icon": "./assets/logo-2.jpg",
+    "plugins": [
+      [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
+        }
+      ]
     ],
-    "ios": {
-      "supportsTablet": true
+    "extra": {
+      "eas": {
+        "projectId": "3b656a42-70ec-48b9-aaab-b763d01f43fd"
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+        "foregroundImage": "./assets/logo-2.jpg",
+        "backgroundColor": "#FFFFFF"
+      },
+      "package": "com.salman1234567890.passwordmanager"
     }
   }
 }
