--- a/package.json
+++ b/package.json
@@ -4,35 +4,36 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@haskkor/react-native-pincode": "^1.22.6",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-firebase/app": "^18.3.1",
+    "@react-native-firebase/auth": "^18.3.1",
+    "@react-native-firebase/database": "^18.3.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "crypto-js": "^4.1.1",
     "expo": "~49.0.5",
+    "expo-build-properties": "^0.8.3",
+    "expo-dev-client": "~2.4.8",
+    "expo-local-authentication": "~13.4.1",
+    "expo-module-autolinking": "^0.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "link": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
-    "react-native-fingerprint-scanner": "^6.0.0",
-    "react-native-keycode": "^1.1.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-swipeable-row": "^0.8.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-uuid": "^2.0.1",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-local-authentication": "~13.4.1"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
