--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "crypto-js": "^4.1.1",
     "expo": "~49.0.5",
     "expo-build-properties": "^0.8.3",
     "expo-dev-client": "~2.4.8",
@@ -28,6 +27,7 @@
     "link": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
