--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-document-picker": "^9.0.1",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-toast-message": "^2.1.6",
