--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-document-picker": "^9.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-toast-message": "^2.1.6",
